用户管理端：添加数据分析模块，添加插件模块。目前插件模块的列表框不能正常显示中文。 插件统一为python插件，在plugins.list中注册，然后创建文件存放到plugin文件夹。建议每个插件单独建立一个文件夹，并且采取【<插件名/插件名>】的形式，第一个插件名为文件夹，第二个为主python程序（以防有插件存在多个文件）。

--- a/user-application/KCrawlerControal/KCrawlerControal/KCrawlerControal.vcxproj.filters
+++ b/user-application/KCrawlerControal/KCrawlerControal/KCrawlerControal.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CreateJobDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="KCCPlugins.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="KCrawlerControal.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CreateJobDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="KCCPlugins.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
