--- a/user-application/KCrawlerControal/KCrawlerControal/KCrawlerControal.vcxproj
+++ b/user-application/KCrawlerControal/KCrawlerControal/KCrawlerControal.vcxproj
@@ -182,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CreateJobDlg.h" />
+    <ClInclude Include="KCCPlugins.h" />
     <ClInclude Include="KCrawlerControal.h" />
     <ClInclude Include="KCrawlerControalDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -190,6 +191,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CreateJobDlg.cpp" />
+    <ClCompile Include="KCCPlugins.cpp" />
     <ClCompile Include="KCrawlerControal.cpp" />
     <ClCompile Include="KCrawlerControalDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
